aligned logo with mobile button, and fixed typewriter holder min height

--- a/docs/css/responsive.css
+++ b/docs/css/responsive.css
@@ -11,7 +11,7 @@
     .typewriterHolder {
         text-align: left;
         padding: 0 24px;
-        min-height: 138px;
+        min-height: 144px;
         margin-bottom: 48px;
     }
 
@@ -40,6 +40,10 @@
         margin-bottom: 6px;
     }
 
+    .logo-text {
+        position: absolute;
+        top: 22px;
+    }
     .logo-text img {
         display: block;
         width: 130px;
